[package]
name = "indexed-merkle-tree"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bellperson = { version = "0.25", default-features = false }
generic-array = "0.14.6"
ff = { version = "0.13", features = ["derive"] }
crypto-bigint = "0.5.2"
num-bigint = "0.4.3"
bellperson-nonnative = { git = "https://github.com/avras/bellperson-nonnative.git" }
pasta_curves = "0.5.1"
neptune = "10.0.0"

[dev-dependencies]
rand = "0.8.5"
